Many bug fixes - Class info actually updated every minute - Class info is now on sidebar - Improved sidebar - General fixes

--- a/client/css/all.css
+++ b/client/css/all.css
@@ -150,6 +150,10 @@ span.badge {
   max-width: 100px;
 }
 
+#nextclass-room, #nowclass-room {
+  font-size: 80%;
+}
+
 /* USER MODAL */
 
 .user-badge {
