--- a/server/views/work/homework.jade
+++ b/server/views/work/homework.jade
@@ -6,7 +6,7 @@
       //b Items
   
   .row
-    if hwTitles.length == 0
+    if hwTitles == false
       h4.text-center No homework!
       br
     else
