--- a/server/views/work/one.jade
+++ b/server/views/work/one.jade
@@ -3,69 +3,55 @@ extends /layout
 block content
   .container
     include /info
-    if date == false
-      .page-header
-        h1 Invalid Date
-    else
-      .page-header
-        h1= date.format("dddd, MMMM Do YYYY")
-          small.right= fromNow
-      .row
-        .col-xs-12.text-center
-          #schedule-day-dropdown.dropdown
-            if day != false
-              b#schedule-day.dropdown-toggle.set(title="Click to change!", data-toggle="dropdown") #{day.scheduleDay}-Day
-            else
-              b#schedule-day.dropdown-toggle(title="Click to set!", data-toggle="dropdown") No Schedule Day!
+    .page-header
+      h1= date.format("dddd, MMMM Do YYYY")
+        small.right= fromNow
+    .row
+      .col-xs-12.text-center
+        b#schedule-day #{scheduleDay}-Day
 
-            ul.dropdown-menu
-              each letter in ['A', 'B', 'C', 'D', 'E']
-                li
-                  a.schedule-day-letter(href="#")= letter
+    p#hw-info.text-center
+      | On this #[b= date.format("dddd")], you have #[a(href="#homework", style="color: #2780e3;")= (items.homework ? items.homework.length : 0) + " homework"] assignments
+      | to complete, #[a(href="#tests", style="color: #f0005e;") 0 tests] to take, #[a(href="#quizzes", style="color: #7643a8;") 0 quizzes] to take, and
+      | #[a(href="#projects", style="color: #ff4309;") 0 projects] due.
 
+    br
+    br.hidden-xs
+    .row.hidden-xs
+      .col-xs-12.text-center
+        input#hw-dial(type="text", value="50", data-fgcolor="#2780e3", data-readonly="true", data-width="100")
+        span.right-spacer
+        input.dial(type="text", value="50", data-fgcolor="#f0005e", data-readonly="true", data-width="100")
+        span.right-spacer
+        input.dial(type="text", value="50", data-fgcolor="#7643a8", data-readonly="true", data-width="100")
+        span.right-spacer
+        input.dial(type="text", value="50", data-fgcolor="#ff4309", data-readonly="true", data-width="100")
 
-      p#hw-info.text-center
-        | On this #[b= date.format("dddd")], you have #[a(href="#homework", style="color: #2780e3;")= (items.homework ? items.homework.length : 0) + " homework"] assignments
-        | to complete, #[a(href="#tests", style="color: #f0005e;") 0 tests] to take, #[a(href="#quizzes", style="color: #7643a8;") 0 quizzes] to take, and
-        | #[a(href="#projects", style="color: #ff4309;") 0 projects] due.
+    // HOMEWORK
+    include homework
 
+    -for(var i=0;i<6;i++)
       br
-      br.hidden-xs
-      .row.hidden-xs
+
+    // TESTS
+    .row#tests
+      .col-xs-12
+        .page-header
+          h2.text-center Tests
         .col-xs-12.text-center
-          input#hw-dial(type="text", value="50", data-fgcolor="#2780e3", data-readonly="true", data-width="100")
-          span.right-spacer
-          input.dial(type="text", value="50", data-fgcolor="#f0005e", data-readonly="true", data-width="100")
-          span.right-spacer
-          input.dial(type="text", value="50", data-fgcolor="#7643a8", data-readonly="true", data-width="100")
-          span.right-spacer
-          input.dial(type="text", value="50", data-fgcolor="#ff4309", data-readonly="true", data-width="100")
+          //b Items
 
-      // HOMEWORK
-      include homework
-
-      -for(var i=0;i<6;i++)
+      .col-xs-12.text-center
+        if !items.tests
+          h4 No tests!
+          -for(var i=0;i<4;i++)
+            br
+        form.form-inline#tests-form(method="POST", role="form")
+          select.form-control(id="newTestSubject", name="newTestSubject", required=true)
+            for course in currentUser.courses
+              option(value=course.mID)= course.title
+          input.form-control(id="newTestDesc", name="newTestDesc", type="text", placeholder="Description", required=true)
+          button.btn.btn-primary.full-when-xs#test-button Add
         br
-
-      // TESTS
-      .row#tests
-        .col-xs-12
-          .page-header
-            h2.text-center Tests
-          .col-xs-12.text-center
-            //b Items
-
-        .col-xs-12.text-center
-          if !items.tests
-            h4 No tests!
-            -for(var i=0;i<4;i++)
-              br
-          form.form-inline#tests-form(method="POST", role="form")
-            select.form-control(id="newTestSubject", name="newTestSubject", required=true)
-              for course in currentUser.courses
-                option(value=course.mID)= course.title
-            input.form-control(id="newTestDesc", name="newTestDesc", type="text", placeholder="Description", required=true)
-            button.btn.btn-primary.full-when-xs#test-button Add
-          br
-          br
-          br
+        br
+        br
