--- a/server/views/parts/sidebar.jade
+++ b/server/views/parts/sidebar.jade
@@ -42,14 +42,15 @@ aside#sidebar
   
   if helpers.isPage(page, "work")
     section#day-controls(class=(helpers.isShort(previous, next)))
-      span
-        a(href="/work/today", title="View the work due today!") T
+      if currentUser.scheduleObject.scheduleDays[moment().format("MM/DD/YY")]
+        span
+          a(href="/work/today", title="View the work due today!") T
       span
         a(href="/work/closest", title="Find the closest day from today that you have work!") C
       
       if previous
         span
-          a.fa.fa-arrow-left(href='/work/'+previous, title="View the previous work day!")
+          a.fa.fa-arrow-left(href='/work/'+previous, title=moment(previous).format("dddd, MMMM Do"))
       if next
         span
           a.fa.fa-arrow-right(href='/work/'+next, title="View the next work day!")     
