Set max lengths on inputs (closes #87)

--- a/server/views/admin/index.jade
+++ b/server/views/admin/index.jade
@@ -11,7 +11,7 @@ block content
       form.form(action="/loginas")
         .form-group
           label(for="loginas") Login as User: 
-          input.form-control(type="text", name="user", placeholder="Username")
+          input.form-control(maxlength="50", type="text", name="user", placeholder="Username")
         button.btn.btn-default Login
       hr
     
