--- a/server/views/home/tabs.jade
+++ b/server/views/home/tabs.jade
@@ -18,7 +18,7 @@ div#tabs
         .form-group
           .input-group
             .input-group-addon.fa.fa-link
-            input.form-control(type="text", name="description", placeholder="Homework Assignment")
+            input.form-control(type="text", maxlength="50", name="description", placeholder="Homework Assignment")
         button.btn.btn-default Add
     #todays-schedule.tab-pane(role='tabpanel')
       table.table#schedule-table
