--- a/server/views/parts/reminders.jade
+++ b/server/views/parts/reminders.jade
@@ -10,5 +10,5 @@
           td.center No reminders!
       form.form-inline#reminder-form(role="form")
         .form-group.full-width
-          input.form-control#reminder-desc(type="text", placeholder="Description", max="100")
+          input.form-control#reminder-desc(type="text", maxlength="50", placeholder="Description", max="100")
           button.btn.btn-primary#add-reminder Add
