--- a/server/views/users/list.jade
+++ b/server/views/users/list.jade
@@ -19,7 +19,7 @@ block content
           form.form-inline#search.hidden
             .form-group
               label(for="name") Name
-              input.form-control(type="text", name="name")
+              input.form-control(type="text", maxlength="50", name="name")
             button.btn.btn-primary Search
     
     if tableForm
