--- a/server/views/users/login-modal.jade
+++ b/server/views/users/login-modal.jade
@@ -16,10 +16,10 @@
                 span#login-errors
                 .form-group.col-xs-12.col-sm-6
                   label(for="username") Regis Username
-                  input.form-control#username(required=true, name="username", placeholder="Username", type="text")
+                  input.form-control#username(required=true, name="username", maxlength="50", placeholder="Username", type="text")
                 .form-group.col-xs-12.col-sm-6
                   label(for="password") Regis Password #[a(href="#", onclick="$('#login-info').toggle();") ?]
-                  input.form-control#password(required=true, name="password", placeholder="Password", type="password")
+                  input.form-control#password(required=true, name="password", maxlength="50", placeholder="Password", type="password")
                 
                 #login-info
                   p.
