Fixed Mumble link

--- a/server/views/home/homepage.jade
+++ b/server/views/home/homepage.jade
@@ -18,7 +18,7 @@ block content
         p.
           Install #[b #[a.undercorated(target="_blank", href="http://wiki.mumble.info/wiki/Main_Page#Download_Mumble") Mumble]],
           it'll only take seconds, and then
-          #[b #[a.undecorated(href="mumble://"+currentUser.username+":regis@regismumble.ddns.net/Work?version=1.2.0") Click Here]]
+          #[b #[a.undecorated(href="mumble://"+currentUser.username+":regis@regismumble.ddns.net/School?version=1.2.0") Click Here]]
         br
     
     .row
