--- a/server/views/users/edit.jade
+++ b/server/views/users/edit.jade
@@ -15,4 +15,7 @@ block content
           .form-group
             label(for="newbio") Bio
             textarea.form-control#newbio(name="newbio")= currentUser.bio
+          .form-group
+            label(for="newsteamlink") Steam Profile Link
+            textarea.form-control#newsteamlink(name="newsteamlink")= currentUser.steamlink
           button.btn.btn-primary Save
