Steam profile links for each user (closes #98) - YOU WILL ALL SEEEEEEEE - EVERYONE WILL BE ON STEAM

--- a/server/views/users/profile.jade
+++ b/server/views/users/profile.jade
@@ -51,7 +51,10 @@ block content
                     br
                     b User Since:
                     |  #{moment(user.registered_date).format('dddd, MMMM Do YYYY')}
-          
+                    br
+                    if user.steamlink
+                      b 
+                        a(href=user.steamlink, target="_blank") Steam Profile
             
         
         .col-xs-12.col-sm-6.col-md-6.col-lg-4
