--- a/server/views/users/edit.jade
+++ b/server/views/users/edit.jade
@@ -17,5 +17,5 @@ block content
             textarea.form-control#newbio(name="newbio")= currentUser.bio
           .form-group
             label(for="newsteamlink") Steam Profile Link
-            textarea.form-control#newsteamlink(name="newsteamlink")= currentUser.steamlink
+            input.form-control#newsteamlink(type="url", name="newsteamlink", value=currentUser.steamlink)
           button.btn.btn-primary Save
