--- a/server/views/work/homework.jade
+++ b/server/views/work/homework.jade
@@ -6,9 +6,10 @@
         .form-group.col-xs-12.col-sm-4.col-md-3
           .input-group(style="width: 100%;")
             .input-group-addon.fa.fa-link#set-hw-link(data-link="")
-            select.form-control(id="newHWItemCourse", name="newHWItemCourse", required=true)
+            input.hidden(name="newHWItemLink", value="")
+            select.form-control(id="newHWItemCourseID", name="newHWItemCourseID", required=true)
               for course in currentUser.courses
-                option(value=course.mID)= course.title  
+                option(value=course._id)= course.title  
         .form-group.col-xs-12.col-sm-6.com-md-7
           input.form-control(style="width: 100%;", id="newHWItemDesc", name="newHWItemDesc", maxlength="50", type="text", placeholder="Description", required=true)
         .form-group.col-xs-12.col-sm-2
