--- a/server/views/work/homework.jade
+++ b/server/views/work/homework.jade
@@ -1,4 +1,4 @@
-.col-xs-12.col-sm-9.col-md-10
+#homework-content.col-xs-12.col-sm-9.col-md-10
   br
   if currentUser.courses.length > 0
     .row
@@ -6,22 +6,24 @@
         .form-group.col-xs-12.col-sm-4.col-md-3
           .input-group(style="width: 100%;")
             .input-group-addon.fa.fa-link#set-hw-link(data-link="")
-            input.hidden(name="newHWItemLink", value="")
-            select.form-control(id="newHWItemCourseID", name="newHWItemCourseID", required=true)
+            input.hidden#newHWItemLink(name="newHWItemLink", value="")
+            select.form-control#newHWItemCourseID(name="newHWItemCourseID", required=true)
               for course in currentUser.courses
                 option(value=course._id)= course.title  
         .form-group.col-xs-12.col-sm-6.com-md-7
           input.form-control(style="width: 100%;", id="newHWItemDesc", name="newHWItemDesc", maxlength="50", type="text", placeholder="Description", required=true)
         .form-group.col-xs-12.col-sm-2
           button.btn.btn-default.full-when-xs#homework-button(style="width: 100%;") Add
+  .worklist
+  
   //
     if hwTitles == false
       h4.text-center No homework!
       br
     else
       for title in hwTitles
-        .col-xs-12.col-md-6.hw-item.text-center
-          a.title(href="/courses/"+homework[title][0].course.mID)= title
+        .
+          
           ol
             for item in homework[title]
               li(data-id=item._id)
