--- a/client/css/work.css
+++ b/client/css/work.css
@@ -1,19 +1,9 @@
-/* Day Pages */
+/* Work Pages */
 
 .right-spacer {
   padding-right: 30px;
 }
 
-.day-list-info {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: space-between;
-  margin: 0 auto;
-}
-
-.day-list-info .has {
-  font-weight: bold;
-}
 
 /* Homework Pages */
 
@@ -39,7 +29,7 @@
   text-decoration: none;
   color: inherit;
   font-weight: 500;
-  font-size: 1.4em;
+  font-size: 1.6em;
 }
 
 .assignment.completed {
@@ -51,10 +41,6 @@
   cursor: pointer;
 }
 
-.timeline {
-  max-width: 320px;
-}
-
-.timeline .stream {
-  max-height: 400px;
+.worklist {
+  padding: 30px;
 }
