Minor header improvements - Moodle links moved to top bar for easier access

--- a/server/views/parts/sidebar.jade
+++ b/server/views/parts/sidebar.jade
@@ -57,7 +57,7 @@ aside#sidebar
     hr
   
   if todaysInfo
-    if helpers.isPage(page, "/") == false || helpers.isPage(page, "/home") == false
+    if page !== "" || helpers.isPage(page, "/home") == false
       section#sidebar-class-info
         #sd-nowc
           b.larger Current Class
