Added class day schedules on work page

--- a/server/views/home/tabs.jade
+++ b/server/views/home/tabs.jade
@@ -36,10 +36,11 @@ div#tabs
         tbody
           if todaysInfo
             for s in todaysInfo.periods
-              tr(class=(s.room=="Cafeteria" ? "active" : ""))
-                td= moment(s.startTime, "hh:mm A").format("h:mm A")
-                td= s.className
-                td= s.room
+              if s.className.indexOf("Advisement") == -1
+                tr(class=(s.room=="Cafeteria" ? "active" : ""))
+                  td= moment(s.startTime, "hh:mm A").format("h:mm A")
+                  td= s.className
+                  td= s.room
           else
             tr
               td No classes today!
@@ -54,10 +55,11 @@ div#tabs
         tbody
           if nextSD
             for s in currentUser.scheduleObject.dayClasses[nextSD]
-              tr(class=(s.room=="Cafeteria" ? "active" : ""))
-                td= moment(s.startTime, "hh:mm A").format("h:mm A")
-                td= s.className
-                td= s.room
+              if s.className.indexOf("Advisement") == -1
+                tr(class=(s.room=="Cafeteria" ? "active" : ""))
+                  td= moment(s.startTime, "hh:mm A").format("h:mm A")
+                  td= s.className
+                  td= s.room
           else
             tr
               td No classes today!
