--- a/server/views/work/one.jade
+++ b/server/views/work/one.jade
@@ -30,12 +30,26 @@ block content
     
       include homework
     
-    .row.hidden-xs
-      hr
-      .col-sm-12.col-md-6
-        h2 Your #{scheduleDay}-Day Schedule
-    
-      .col-sm-12.col-md-6.text-center
+    .row
+      br.hidden-xs
+      hr.visible-xs
+      .col-xs-12
+        h2.visible-xs Your #{scheduleDay}-Day Classes
+        table.table.table-hover#schedule-table.visible-xs
+          for s in currentUser.scheduleObject.dayClasses[scheduleDay]
+            if s.className.indexOf("Advisement") == -1
+              tr(class=(s.room=="Cafeteria" ? "active" : ""))
+                td(data-toggle="tooltip", title=moment(s.startTime, "hh:mm A").format("h:mm A")+" to "+moment(s.endTime, "hh:mm A").format("h:mm A"))= s.className.split("(")[0]
+        table.table#schedule-table.hidden-xs.center
+          caption.center
+            b Your #{scheduleDay}-Day Classes
+          tbody
+            tr
+              for s in currentUser.scheduleObject.dayClasses[scheduleDay]
+                if s.className.indexOf("Advisement") == -1
+                  td(class=(s.room=="Cafeteria" ? "active" : ""), data-toggle="tooltip", title=moment(s.startTime, "hh:mm A").format("h:mm A")+" to "+moment(s.endTime, "hh:mm A").format("h:mm A"))= s.className.split("(")[0]
+      
+      .col-sm-12.text-center.hidden-xs
         br
         br
         br
