--- a/server/views/work/one.jade
+++ b/server/views/work/one.jade
@@ -18,7 +18,14 @@ block content
           li(role='presentation')
             a(href='#') Messages
       .col-xs-12.visible-xs
-        p.no-margin.full-width.text-center#schedule-day #{scheduleDay}-Day
+        p.no-margin.full-width.text-center#schedule-day
+          if previous !== false
+            span
+              a.fa.fa-arrow-left.left(href='/work/'+previous, title=moment(previous).format("dddd, MMMM Do"))
+          | #{scheduleDay}-Day
+          if next !== false
+            span
+              a.fa.fa-arrow-right.right(href='/work/'+next, title="View the next work day!")    
         hr(style="margin-top: 0")
         ul.nav.nav-pills
           li.active(role='presentation')
