Login submit fixed for Safari (closes #109)

--- a/server/views/users/login-modal.jade
+++ b/server/views/users/login-modal.jade
@@ -29,7 +29,7 @@
                   br
                   span Don't believe me? See #[a(target="_blank", href="https://github.com/Apexal/ontrac/blob/master/server/routes/index.js") for yourself].
 
-                button.btn.right.btn-primary#login-button Login
+                button.btn.right.btn-primary#login-button(type="button") Login
 
 script.
   sessionStorage.unread = 0;
