--- a/server/views/parts/header.jade
+++ b/server/views/parts/header.jade
@@ -24,6 +24,8 @@ header
                   a(href="/advisements", title="View and search through all advisements at Regis.") Advisements
               li
                 a(target="_blank", title="View the public source code behind this project, maintained solely by me.", href="https://github.com/Apexal/ontrac") Source Code
+              li
+                a(target="_blank", title="View the recorded issues that I'm working on for the site.", href="https://waffle.io/Apexal/ontrac/join") Issue Progress
           if loggedIn
             if isHomepage == false
               li.dropdown
